<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_color">

    <LinearLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:stretchColumns="*"
        tools:context=".fragment.AddImagesFragment">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:cardBackgroundColor="?attr/primary_color">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:fontFamily="sans-serif-light"
                tools:text="@string/excel_to_pdf"
                android:textColor="@color/white"
                android:layout_marginBottom="5dp"
                android:textSize="18sp" />

        </androidx.cardview.widget.CardView>

        <com.dd.morphingbutton.MorphingButton
            android:id="@+id/selectFile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:maxWidth="30dp"
            android:padding="3dip"
            android:backgroundTint="?attr/primary_color"
            style="@style/MorphingButton"
            android:text="@string/merge_file_select"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/infoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="?attr/secondary"
            android:text="@string/compress_pdf_prompt"
            android:layout_marginHorizontal="24dp"/>

        <EditText
            android:labelFor="@id/infoText"
            android:id="@+id/pages"
            android:hint="@string/prompt_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="number"
            android:backgroundTint="?attr/primary_color"
            android:textColor="?attr/secondary"
            android:layout_marginHorizontal="24dp"/>

        <TextView
            android:id="@+id/compressionInfoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:visibility="gone"
            android:textColor="?attr/secondary"
            android:text="@string/compress_info" />

        <com.dd.morphingbutton.MorphingButton
            android:id="@+id/pdfCreate"
            style="@style/MorphingButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:layout_marginTop="112dp"
            android:backgroundTint="?attr/primary_color"
            android:padding="10dp"
            android:text="@string/create_pdf"
            app:layout_constraintBottom_toTopOf="@id/recyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView" />

        <Button
            android:id="@+id/view_pdf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_pdf"
            android:layout_margin="16dp"
            android:visibility="gone"
            android:backgroundTint="@color/mb_green"/>

    </LinearLayout>

    <include layout="@layout/bottom_sheet" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
