<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/add_text_root"
    android:background="@color/light_gray"
    tools:context=".activity.AddTextActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_add_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/primary_color"
            app:titleTextColor="@color/white"
            app:title="@string/edit_images_text"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            app:navigationIconTint="@color/white"/>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/add_text_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?android:attr/actionBarSize"
        android:orientation="vertical"
        tools:context=".activity.CropImageActivity">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/imageView_add_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                tools:src="@drawable/ic_launcher_background"
                custom:cropInitialCropWindowPaddingRatio="0" />


            <FrameLayout
                android:id="@+id/add_text_layout"
                android:layout_width="200dp"
                android:layout_gravity="center"
                android:background="#4029a8e0"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="17sp"
                        android:background="@null"
                        android:visibility="visible"
                        android:layout_margin="10dp"
                        />

                    <EditText
                        android:id="@+id/text_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="17sp"
                        android:background="@null"
                        android:hint="@string/add_text"

                        />
                </LinearLayout>

            </FrameLayout>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cropButton_add_text"
                android:layout_width="wrap_content"
                android:minWidth="40dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_weight="1"
                android:background="@drawable/cornered_edges"
                android:text="@string/save_current"
                android:textAllCaps="false"
                android:textColor="?attr/bottomSheetTextColor" />



            <ImageView
                android:id="@+id/previousImageButton_add_text"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:layout_weight="3"
                android:contentDescription="@string/previous_image_content_desc"
                android:gravity="center"
                android:layout_gravity="center"
                app:tint="?attr/primary_color"
                app:srcCompat="@drawable/ic_navigate_before_white_24dp"
                tools:targetApi="lollipop" />

            <TextView
                android:id="@+id/imagecount_add_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:gravity="center"
                android:textColor="?attr/secondary"
                android:text="@string/showing_image" />

            <ImageView
                android:id="@+id/nextimageButton_add_text"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="3"
                android:contentDescription="@string/nextimage_contentdesc"
                android:gravity="center"
                android:layout_gravity="center"
                app:tint="?attr/primary_color"
                app:srcCompat="@drawable/ic_navigate_next_black_24dp"
                tools:targetApi="lollipop" />

            <Button
                android:id="@+id/text_color_button"
                android:layout_width="wrap_content"
                android:minWidth="40dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:backgroundTint="@color/black"
                />

        </LinearLayout>

    </LinearLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>