<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_color"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:cardBackgroundColor="?attr/primary_color">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:fontFamily="sans-serif-light"
                android:text="@string/add_text"
                android:textColor="@color/white"
                android:layout_marginBottom="5dp"
                android:textSize="18sp" />

        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:id="@+id/add_text_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:stretchColumns="*"
            tools:context=".fragment.AddTextFragment"
            android:layout_margin="@dimen/activity_horizontal_margin">

            <com.dd.morphingbutton.MorphingButton
                android:id="@+id/select_pdf_file"
                style="@style/MorphingButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:maxWidth="30dp"
                android:padding="3dip"
                android:backgroundTint="?attr/primary_color"
                android:text="@string/select_pdf_file"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"/>

            <com.dd.morphingbutton.MorphingButton
                android:id="@+id/select_text_file"
                style="@style/MorphingButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/select_pdf_file"
                android:layout_marginTop="15dp"
                android:backgroundTint="?attr/primary_color"
                android:maxWidth="30dp"
                android:padding="3dip"
                android:text="@string/select_text_file" />

            <com.dd.morphingbutton.MorphingButton
                android:id="@+id/create_pdf_added_text"
                style="@style/MorphingButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/select_text_file"
                android:layout_gravity="center"
                android:backgroundTint="?attr/primary_color"
                android:layout_marginTop="15dp"
                android:padding="10dp"
                android:text="@string/create_pdf" />
        </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="bottom|center"
                android:orientation="vertical"
                tools:targetApi="lollipop"
                android:paddingHorizontal="10dp">
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    app:cardCornerRadius="25dp"
                    android:layout_marginTop="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/more_options_text"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:textColor="?attr/secondary"
                    android:layout_marginVertical="10dp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/enhancement_options_recycle_view_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    android:isScrollContainer="false"
                    android:layout_marginVertical="15dp"
                    android:layout_marginHorizontal="5dp"/>
            </LinearLayout>
    </LinearLayout>

    <include layout="@layout/bottom_sheet" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>

